tests/reference/asr-matrix_matmul_06-d802f54.stderr
semantic error: The argument `matrix_b` in `matmul` must be of rank 2, provided an array with rank, 1
 --> tests/errors/matrix_matmul_06.f90:5:24
  |
5 |     print *, matmul(a, b)
  |                        ^ 
